<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_share" android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100" app:showAsAction="always"
        android:title="@string/menu_share">

        <menu>

            <item android:id="@+id/action_import"
                android:orderInCategory="100" app:showAsAction="always"
                android:title="@string/ssmenu_import" />

            <item android:id="@+id/action_sms"
                android:orderInCategory="100" app:showAsAction="always"
                android:title="@string/ssmenu_sms" />

            <item android:id="@+id/action_scan"
                android:orderInCategory="100" app:showAsAction="always"
                android:title="@string/ssmenu_scan" />


        </menu>

    </item>

    <item android:id="@+id/action_settings" android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100" app:showAsAction="always"
        android:title="@string/menu_settings" />

    <item android:id="@+id/action_login" android:icon="@android:drawable/ic_lock_power_off"
        android:orderInCategory="100" app:showAsAction="always"
        android:title="@string/menu_login" />

</menu>