<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icone"
            android:layout_gravity="center"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:inputType="textPersonName"
                android:text="@string/name"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="textPersonName"
                android:text="@string/surname"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/nfc_code"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/nfc" />

            <ImageView
                android:id="@+id/qr_code"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/qr" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_marginLeft="130dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/mail"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/site"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/site"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/address"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/phone1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/tel1"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/phone2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/tel2"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>