<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/splash"
        android:id="@+id/img_login"
        android:contentDescription="" />


    <TextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/login_text" />

    <EditText
        android:inputType="textEmailAddress"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:ems="10"
        android:id="@+id/login_email"
        android:background="@color/colorBackground" />

    <EditText
        android:inputType="numberPassword"
        android:layout_marginBottom="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:ems="10"
        android:id="@+id/login_password"
        android:background="@color/colorBackground"/>

    <Button
        android:text="@string/connection"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/colorBackground"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/login_button" />

    <TextView
        android:text="@string/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorBackground"
        android:textStyle="bold"
        android:textSize="14dp"
        android:id="@+id/login_register_link" />

</LinearLayout>